# PCS_2026

./: test_esercitazione.txt
esercitazione1/: CMakeLists.txt  medie.cpp  printargs.cpp
esercitazione2/: CMakeLists.txt  prog.cpp  solution.cpp
esercitazione3/: CMakeLists.txt  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt
esercitazione5/: CMakeLists.txt  measure_sorts.cpp  osservazioni.txt  sorts.hpp  test_mergesort.cpp  test_quicksort.cpp  test_quicksort_ottimizzato.cpp
esercitazione6/: CMakeLists.txt  graphs.hpp  main.cpp  test_graphs.cpp
esercitazione7/: CMakeLists.txt  graphs.hpp  main.cpp  visits.hpp
esercitazione8/: CMakeLists.txt  cg.hpp  main.cpp
